# Axium

./: .gitignore  Axium.md  HANDOFF-EPOXY-STATIC-LTO.md  HANDOFF.md  benchmarks.md  cross.nix  extensions.md  flake.nix  gn-flags-engine.nix  gn-flags.nix  result
Adblock/: adblock.c  adblock.js  adblock.nix  adblock.odin  default.nix  lib.rs  serialize.rs
Browser/: browser.nix  command.odin  commands.odin  config.odin  config.sjson  default.nix  download.odin  edges.odin  engine.odin  event.odin  events.odin  export_syms.ld  extension.odin  extension.odin.bak  favorite.odin  gl.odin  keyboard.odin  main.odin  session.odin  setting.odin  tab.odin  tabs.odin  ui.odin  widgets.odin  window.odin  wpe_shim.c  wpe_shim.h
Engine/: WebKit_flags.md  axium_host.cpp  default.nix  engine.bak  engine.c  engine.c.bak2  engine.h  engine.nix  engine.odin  gstreamer-full.nix  subprocess.cpp
Keepass/: keepass.nix  keepass.odin  proto.odin  sodium.odin
Pages/: pages.nix
Translate/: translate.cpp  translate.h  translate.nix  translate.odin
build-overrides/: BUILD.gn
patches/: compiler-optimizations.patch  disable-default-browser-prompt.patch  disable-guest-view-assert.patch  disable-speech-service-assert.patch  enable-vertical-tabs.patch  remove-on-device-translation-assert.patch  remove-speech-service-assert.patch  stub-background-download.patch  stub-bluetooth.patch  stub-contextual-cueing.patch  stub-devtools.patch  stub-extension-telemetry.patch  stub-google-groups.patch  stub-identity-manager.patch  stub-midi.patch  stub-popular-sites.patch  stub-prediction-service.patch  (+3 more)
(+24 files in other folders)
